// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-table Cell component should have the right structure 1`] = `
<td
  className="
      cell
      false
      className
    "
>
  Content
</td>
`;

exports[`fyndiq-component-table Row component should have the right structure 1`] = `
<React.Fragment>
  <tr
    className="
        row
        false
        false
        false
        rowSize-m
        false
        false
        className
      "
  >
    <td
      className="cellSpacer cell"
    />
    Content
    <td
      className="cellSpacer cell"
    />
  </tr>
  <tr
    className="rowSpacer"
  />
</React.Fragment>
`;

exports[`fyndiq-component-table Table component should have the right structure 1`] = `
<table
  className="
      table
      className
    "
>
  <tbody>
    Content
  </tbody>
</table>
`;
